# indras-net

./: .gitattributes  .gitignore  .gitleaks.toml  AUTHORSHIP.md  CHANGELOG.md  GLOSSARY.md  NOTICE  OPERATOR.md  README.ai.md  README.md
.github/workflows/: ci.yml
agents/: README.md
docs/: 00-overview-and-principles.md  00b-evolution-overview.md  00c-collective-and-commons-overview.md  01-swarm-topology-and-agents.md  02-cooperation-and-anti-collusion.md  03-governance-ethics-and-the-floor.md  04-provenance-identity-and-consensus.md  05-neuromorphic-coordination.md  06-meta-evolution-and-health.md  07-memory-and-continuous-adaptation.md  08-safety-control-honesty-and-interfaces.md  09-threat-model.md  10-related-work-and-state-of-the-art.md  11-reference-implementation-and-roadmap.md  12-functional-agents-and-guilds.md  13-agent-definition-spec.md  14-inter-swarm-federation-and-diplomacy.md  15-self-replication-and-scaling.md  16-trust-establishment.md  17-security-opsec-and-anti-poisoning.md  18-first-principles-physics-and-mathematics.md  19-collective-and-emergent-intelligence.md  20-universal-cooperation-and-the-intelligence-commons.md  21-protocols-and-wire-contracts.md  22-worked-scenarios.md  23-formal-models-and-verification.md  IMPLEMENTATION_ROADMAP.md  REFERENCES.md
reference/impl/: LICENSE  README.md  pyproject.toml  run_demo.py
reference/impl/indras_net/: __init__.py  __main__.py  agents.py  audit.py  canon.py  cli.py  collective.py  cooperation.py  demo.py  effects.py  envelope.py  execution.py  floor.py  genome.py  health.py  identity.py  market.py  memory.py  model.py  model_http.py  runtime.py  signing.py
reference/impl/tests/: __init__.py  _helpers.py  test_audit.py  test_capability.py  test_cooperation.py  test_envelope.py  test_execution.py  test_floor.py  test_genome.py  test_humangate.py  test_immune.py  test_makerchecker.py  test_market.py  test_memory.py  test_model_http.py  test_persistence.py  test_redteam_smoke.py  test_reparative.py  test_runtime.py  test_signing.py
reference/schemas/: README.md  audit-entry.schema.json  (+5 more)
(+72 files in other folders)
